--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -44,14 +44,14 @@
 		<!-- Slideshow -->
 
 		<div layout="row" layout-align="center center">
-			<md-card layout="row" layout-align="center center" class="md-whiteframe-4dp" style="background: {{primary_hue_normal.value}}; width: 60%; margin-top: -64px; z-index: 2; position: relative;">
-				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%; position: relative; overflow: hidden;">
+			<md-card layout="row" layout-align="center center" class="md-whiteframe-8dp" style="background: {{primary_hue_normal.value}}; width: 60%; margin-top: -64px; z-index: 2; overflow: hidden;">
+				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
 
 					<h1 style="color: {{base_hue_lightest.value}}; font-size: 24px; line-height: 64px; margin: 0; z-index: 2">Some Sample Text Here</h1>
 					<p style="color: {{base_hue_lightest.value}}; margin: 16px; line-height: 24px; z-index: 2">MMA offers a “one-stop shop” by integrating Civil Engineering with Planning, Zoning, Surveying, Landscape Architecture and Construction Management.</p>
 					<img ng-src="media/pexels-photo-860379.jpeg" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1">
 				</div>
-				<div flex="66" layout="row" layout-align="center center" style="background-color: #fafafa;">
+				<div flex="66" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding ng-repeat="items in [1,2,3,4]" flex="50">
 							<md-card style="background: #fafafa; height: 100%;">
