--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -4,7 +4,7 @@
 	<section ng-cloak>
 
 		<!-- sticky header -->
-		<md-subheader class="md-whiteframe-4dp header" layout-align="center center" layout="row" layout flex style="z-index: 3">
+		<md-subheader class="md-whiteframe-4dp header" layout-align="center center" layout="row" layout flex style="z-index: 5">
 
 			<div layout-align="center center" layout="row" layout flex>
 
@@ -53,20 +53,22 @@
 				<div flex="66" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding ng-repeat="items in [1,2,3,4]" flex="50">
-							<div flex="33" layout="column" layout-align="center center">
-								<md-icon style="color: {{primary_hue_normal.value}}; font-size: 48px;">slow_motion_video</md-icon>
-							</div>
-							<div flex="66" layout="column" layout-align="center center">
-								<md-card style="background: #fafafa; height: 100%;">
-									<md-card-header>
-										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
-										</md-card-header-text>
-									</md-card-header>
-									<md-card-content>
-										<p>MMA's Engineering team utilizes their extensive land development experience.</p>
-									</md-card-content>
-								</md-card>
+							<div layout-wrap layout="row" layout-align="center center">
+								<div flex="33" layout="column" layout-align="center center">
+									<md-icon style="color: {{primary_hue_normal.value}}; font-size: 48px;">slow_motion_video</md-icon>
+								</div>
+								<div flex="66" layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+										</md-card-content>
+									</md-card>
+								</div>
 							</div>
 						</div>
 					</div>
