--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -8,7 +8,7 @@
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content" style="margin-top: 200px; margin-left: 100px; z-index: 1;" flex>
+        <div class="slideshow-content" style="margin-top: 9%; margin-left: 20%; z-index: 1;" flex>
         	<div style="position: relative; max-width: 468px; height: 400px;" layout="row" layout-align="center center" flex>
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
