--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -43,6 +43,7 @@
 		<div ng-include src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 
+		<!--  -->
 		<div layout="row" layout-align="center center">
 			<md-card layout="row" layout-align="center center" class="md-whiteframe-8dp" style="background: {{primary_hue_normal.value}}; width: 60%; margin-top: -64px; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="33" layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}}; height: 100%;">
@@ -75,6 +76,40 @@
 				</div>
 			</md-card>
 		</div>
+		<!--  -->
+
+		<!--  -->
+		<div layout="row" layout-align="center center">
+			<md-card layout="row" layout-align="center center" class="md-whiteframe-8dp" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
+				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
+					<div layout-wrap layout="row" layout-align="center center">
+						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
+							<div layout-wrap layout="row" layout-align="center center">
+								<div flex="33" layout="column" layout-align="center center">
+									<md-icon style="color: {{primary_hue_normal.value}}; font-size: 48px;">slow_motion_video</md-icon>
+								</div>
+								<div flex="66" layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+												<h1 style="color: {{base_hue_darkest.value}}; font-size: 24px; line-height: 64px; margin: 0; z-index: 2">Some Sample Text Here</h1>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+										</md-card-content>
+									</md-card>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</md-card>
+		</div>
+		<!--  -->
+
+
 		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}">
 			<div class="footer-content-top" layout="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="center center" flex="33">
