--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -230,6 +230,7 @@
 
 <script src="vendors/d3.min.js" charset="utf-8"></script>
 <script>
+var d3 = window.d3 || {};
 
 var svg = d3.select("#pie")
 	.append("svg")
