--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -79,7 +79,7 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" style="margin-top: 32px; margin-bottom: 32px;">
+		<div layout="row" layout-align="center center" style="padding-top: 32px; padding-bottom: 32px;">
 			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
