--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -112,36 +112,38 @@
 		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
 			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
-					<h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding flex="66">
-							<div flex layout="row" layout-align="center center">
-								<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
-									<md-card-header>
-										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-										</md-card-header-text>
-									</md-card-header>
-									<md-card-content>
-										<p>MMA's Engineering team utilizes their extensive land development experience.</p>
-										<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-                    					</md-button>
-									</md-card-content>
-								</md-card>
-								<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
-									<md-card-header>
-										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-										</md-card-header-text>
-									</md-card-header>
-									<md-card-content>
-										<p>MMA's Engineering team utilizes their extensive land development experience.</p>
-										<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-                    					</md-button>
-									</md-card-content>
-								</md-card>
+							<div layout="column" layout-align="center center">
+								<h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
+								<div flex layout="row" layout-align="center center">
+									<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+								</div>
 							</div>
 						</div>
 						<div layout-padding flex="33">
