--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -109,7 +109,7 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
+		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
 			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
