--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -110,12 +110,11 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
-			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
+			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
+				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding flex="66">
-							<div layout="column" layout-align="center center">
-								<h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
 								<div flex layout="row" layout-align="center center">
 									<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
 										<md-card-header>
@@ -144,7 +143,6 @@
 										</md-card-content>
 									</md-card>
 								</div>
-							</div>
 						</div>
 						<div layout-padding flex="33">
 								<div flex layout="column" layout-align="center center">
