--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -110,7 +110,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
-			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 60%; z-index: 2; overflow: hidden; position: relative;">
+			<md-card layout="column" layout-align="center center" style="width: 60%; z-index: 2; overflow: hidden; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
@@ -119,6 +119,7 @@
 									<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<p>OUR STRATEGY</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -132,6 +133,7 @@
 									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<p>OUR FOCUS</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
