--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -111,7 +111,7 @@
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
 			<md-card layout="column" layout-align="center center" style="width: 60%; z-index: 2; overflow: hidden; position: relative;">
-				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0;">HOW WE SOLVE YOUR PROBLEMS</h1>
+				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding flex="66">
