--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -110,7 +110,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
-			<md-card layout="column" layout-align="center center" style="width: 60%; z-index: 2; overflow: hidden; position: relative;">
+			<md-card layout="column" layout-align="center center" style="width: 60%; z-index: 2; overflow: hidden; position: relative; background-color: {{base_hue_lightest.value}};">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
@@ -121,6 +121,7 @@
 											<md-card-header-text>
 												<p>OUR STRATEGY</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<p style="font-size: 18px;">DELIVERS</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
@@ -135,6 +136,7 @@
 											<md-card-header-text>
 												<p>OUR FOCUS</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<p style="font-size: 18px;">IS UNRIVALED</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
