--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -119,9 +119,9 @@
 									<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<p>OUR STRATEGY</p>
+												<p style="font-size: 14px; color: {{base_hue_lightest.value}};">OUR STRATEGY</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-												<p style="font-size: 18px;">DELIVERS</p>
+												<p style="font-size: 18px; color: {{base_hue_lightest.value}};">DELIVERS</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
@@ -134,9 +134,9 @@
 									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<p>OUR FOCUS</p>
+												<p style="font-size: 14px; color: {{base_hue_lightest.value}};">OUR FOCUS</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-												<p style="font-size: 18px;">IS UNRIVALED</p>
+												<p style="font-size: 18px; color: {{base_hue_lightest.value}};">IS UNRIVALED</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
