--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -28,7 +28,7 @@
 		<!-- sticky header -->
 
 		<!-- messaging notification -->
-		<div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
+		<div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darker.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
 			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 16px;">Click Here To Connect With Us!</p><span flex></span>
 			<md-button class="md-icon-button" ng-click="show_notification = false" aria-label="More">
 				<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
@@ -66,7 +66,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 										</md-card-content>
 									</md-card>
 								</div>
@@ -89,11 +89,11 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darker.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
@@ -111,7 +111,7 @@
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
 			<md-card layout="column" layout-align="center center" style="width: 80%; z-index: 2; overflow: hidden; position: relative; background-color: {{base_hue_lightest.value}};">
-				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
+				<h1 style="color: {{base_hue_darker.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding flex="66">
@@ -125,7 +125,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
@@ -134,13 +134,13 @@
 									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<p style="font-size: 14px;">OUR FOCUS</p>
+												<p style="font-size: 14px; color: {{base_hue_darker.value}};">OUR FOCUS</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 												<p style="font-size: 18px;">IS UNRIVALED</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
@@ -153,21 +153,21 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darker.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 										</md-card-content>
 									</md-card>
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darker.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p>MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 										</md-card-content>
 									</md-card>
 								</div>
