--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -109,6 +109,23 @@
 		<!--  -->
 
 		<!--  -->
+		<div layout="row" layout-align="center center">
+			<md-card layout="column" layout-align="center center" flex="50">
+				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out">
+			</md-card>
+			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}};" flex="50">
+				<md-card-content>
+				<h1>Medical Offices</h1>
+				<p>Here's the gallery description</p>
+				<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
+				</md-button>
+				</md-card-content>
+			</md-card>
+		</div>
+		<!--  -->
+
+		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-bottom: 64px;">
 			<md-card layout="column" layout-align="center center" style="width: 80%; z-index: 2; overflow: hidden; position: relative; background-color: {{base_hue_lightest.value}};">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
@@ -134,13 +151,13 @@
 									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<p style="font-size: 14px; color: {{base_hue_darker.value}};">OUR FOCUS</p>
+												<p style="font-size: 14px; color: {{base_hue_darkest.value}};">OUR FOCUS</p>
 												<span class="md-title" style="font-size: 24px; font-weight: bold;">GEOGRAPHIC INFORMATION SYSTEMS</span>
 												<p style="font-size: 18px;">IS UNRIVALED</p>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
@@ -153,17 +170,17 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darker.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 										</md-card-content>
 									</md-card>
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darker.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; font-weight: bold; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
