--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,6 +27,22 @@
 		</md-subheader>
 		<!-- sticky header -->
 
+		<!-- Side Nav -->
+		<md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
+
+			<md-toolbar>
+				<h1 class="md-toolbar-tools">Sidenav Right</h1>
+			</md-toolbar>
+			<md-content layout-padding>
+				<md-button ng-click="sideNavToggle()">
+				Close Sidenav Right
+				</md-button>
+			</md-content>
+
+		</md-sidenav>
+		<!-- Side Nav -->
+
+
 		<!-- messaging notification -->
 		<div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
 			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 16px;">Click Here To Connect With Us!</p><span flex></span>
