--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,20 +27,7 @@
 		</md-subheader>
 		<!-- sticky header -->
 
-		<!-- Side Nav -->
-		<md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
-
-			<md-toolbar>
-				<h1 class="md-toolbar-tools">Sidenav Right</h1>
-			</md-toolbar>
-			<md-content layout-padding>
-				<md-button ng-click="sideNavToggle()">
-				Close Sidenav Right
-				</md-button>
-			</md-content>
-
-		</md-sidenav>
-		<!-- Side Nav -->
+		
 
 
 		<!-- messaging notification -->
@@ -126,13 +113,13 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; max-height: 300px">
+			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; max-height: 400px; overflow: hidden">
 				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out">
 			</md-card>
-			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; min-height: 300px; margin: 0" flex="50">
+			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; min-height: 400px; margin: 0" flex="50">
 				<md-card-content>
-				<h1>Medical Offices</h1>
-				<p>Here's the gallery description</p>
+				<h1 style="text-align: center;">Medical Offices</h1>
+				<p style="text-align: center;">Here's the gallery description</p>
 				<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
 				</md-button>
