--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,7 +107,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; max-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}};">
+			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative;">
 				<md-card-content style="text-align: center;">
 				<h1 style="z-index: 2;">Medical Offices</h1>
 				<p style="z-index: 2;">Here's the gallery description</p>
