--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -109,10 +109,10 @@
 		<div layout="row" layout-align="center center">
 			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative;">
 				<md-card-content style="text-align: center;">
-				<h1 style="z-index: 2;">Medical Offices</h1>
-				<p style="z-index: 2;">Here's the gallery description</p>
-				<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; z-index: 2;">
-					<md-icon style="color: {{base_hue_lightest.value}};">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
+				<h1 style="z-index: 2; color: {{base_hue_lightest.value}};">Medical Offices</h1>
+				<p style="z-index: 2; color: {{base_hue_lightest.value}};">Here's the gallery description</p>
+				<md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
+					<md-icon style="color: {{primary_hue_normal.value}};">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
 				</md-button>
 				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1;">
 				</md-card-content>
