--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -256,9 +256,7 @@
 			</div>
 			<!-- <md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider> -->
 			<div class="footer-content-bottom" layout="row" layout-align="start center" layout-padding flex>
-				<div layout="row" layout-padding layout-align="start center" flex="30">
-					<img src="media/logo-box-white.png" style="max-height: 48px;">
-				</div>
+				<span flex="30"></span>
 				<div layout-padding flex="70">
 					<div flex layout="row" layout-align="end center">
 						<md-button ng-if="user" class="md-primary md-raised" ng-click="auth.$signOut()" >
