--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -115,10 +115,10 @@
 				</md-button>
 				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1;">
 			</md-card>
-			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; min-height: 400px; margin: 0" flex="50">
+			<md-card layout="column" layout-align="center center" layout-padding style="background: {{primary_hue_normal.value}}; min-height: 400px; margin: 0" flex="50">
 				<md-card-content>
-				<h1>PROJECT DETAILS</h1>
-				<p style="line-height: 24px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h1 style="color: {{base_hue_lightest.value}};">PROJECT DETAILS</h1>
+				<p style="line-height: 24px; color: {{base_hue_lightest.value}};">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</md-card-content>
 			</md-card>
 		</div>
