--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,19 +107,13 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center">
-			<md-card layout="column" layout-align="center center" flex="50" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative; text-align: center;">
+			<md-card ng-repeat="item in [1,2,3,4]" layout="column" layout-align="center center" flex="25" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative; text-align: center;">
 				<h1 style="z-index: 2; color: {{base_hue_lightest.value}};">MEDICAL OFFICES</h1>
 				<p style="z-index: 2; color: {{base_hue_lightest.value}};">City of Arlington, TX</p>
 				<md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
 					<md-icon style="color: {{primary_hue_normal.value}};">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
 				</md-button>
 				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1;">
-			</md-card>
-			<md-card layout="column" layout-align="center center" style="background: {{primary_hue_normal.value}}; min-height: 400px; margin: 0; padding: 36px;" flex="50">
-				<md-card-content>
-				<h1 style="color: {{base_hue_lightest.value}};">PROJECT DETAILS</h1>
-				<p style="line-height: 24px; color: {{base_hue_lightest.value}};">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				</md-card-content>
 			</md-card>
 		</div>
 		<!--  -->
