--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -8,7 +8,7 @@
 
 			<div layout-align="center center" layout="row" layout flex>
 
-				<div flex-gt-sm="33" layout-align="center center" layout="row">
+				<div flex-gt-sm="33" layout-align="start center" layout="row">
 					<img src="media/logo.png" style="max-height: 48px;">
 				</div>
 
