--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,7 +107,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" ng-init="hovered = false" layout-wrap>
-			<md-card ng-repeat="item in [1,2,3,4,5,6,7,8]" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" layout="column" layout-align="center center" flex="25" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative; text-align: center;">
+			<md-card ng-repeat="item in [1,2,3,4,5,6,7,8]" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" layout="column" layout-align="center center" flex="25" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{base_hue_lighter.value}}; position: relative; text-align: center;">
 				<h1 style="z-index: 2; color: {{base_hue_lightest.value}};">MEDICAL OFFICES</h1>
 				<p style="z-index: 2; color: {{base_hue_lightest.value}};">City of Arlington, TX</p>
 				<md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
