--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -125,7 +125,7 @@
 					<div layout-padding flex="33">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
 							<md-card-header>
-								<img ng-cloak src="media/state-thomas7.jpg" class="md-card-image">
+								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
 								</md-card-header-text>
@@ -137,7 +137,7 @@
 					</div>
 					<div layout-padding flex="33">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
-							<img ng-cloak src="media/hedgcoxe-medical-offic(3).jpg" class="md-card-image">
+							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
