--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -108,9 +108,9 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="80" layout="row" layout-align="center center" style="background-color: rgba(224,224,224,.2); z-index: 2">
-				<div layout-wrap layout="row" layout-align="start center">
-					<div flex="33" layout="column" layout-align="center start">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(224,224,224,.2); z-index: 2">
+				<div layout-wrap layout="row" layout-align="start center" flex="80">
+					<div flex="33" layout="column" layout-align="start center">
 						<md-card style="background: transparent; height: 100%;">
 							<md-card-header>
 								<md-card-header-text>
